--- a/GestionSon.uvprojx
+++ b/GestionSon.uvprojx
@@ -431,6 +431,26 @@
           </Files>
         </Group>
         <Group>
+          <GroupName>ServiceDFT</GroupName>
+          <Files>
+            <File>
+              <FileName>CosSin_float.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Service_DFT_float\CosSin_float.c</FilePath>
+            </File>
+            <File>
+              <FileName>Signal_float.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Service_DFT_float\Signal_float.c</FilePath>
+            </File>
+            <File>
+              <FileName>DFT.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\DFT\DFT.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
           <GroupName>::CMSIS</GroupName>
           <GroupOption>
             <CommonProperty>
@@ -925,6 +945,26 @@
               <FileName>startup-rvds.s</FileName>
               <FileType>2</FileType>
               <FilePath>.\System\startup-rvds.s</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>ServiceDFT</GroupName>
+          <Files>
+            <File>
+              <FileName>CosSin_float.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Service_DFT_float\CosSin_float.c</FilePath>
+            </File>
+            <File>
+              <FileName>Signal_float.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Service_DFT_float\Signal_float.c</FilePath>
+            </File>
+            <File>
+              <FileName>DFT.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\DFT\DFT.c</FilePath>
             </File>
           </Files>
         </Group>
