on a tout fait en fait on est trop forts ceci est un message très serieux

--- a/GestionSon.uvprojx
+++ b/GestionSon.uvprojx
@@ -434,19 +434,19 @@
           <GroupName>ServiceDFT</GroupName>
           <Files>
             <File>
-              <FileName>CosSin_float.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\Service_DFT_float\CosSin_float.c</FilePath>
-            </File>
-            <File>
-              <FileName>Signal_float.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\Service_DFT_float\Signal_float.c</FilePath>
-            </File>
-            <File>
               <FileName>DFT.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\DFT\DFT.c</FilePath>
+            </File>
+            <File>
+              <FileName>CosSin_Fract_1_15.asm</FileName>
+              <FileType>2</FileType>
+              <FilePath>.\Service_DFT_Fract\CosSin_Fract_1_15.asm</FilePath>
+            </File>
+            <File>
+              <FileName>Signal_4_12.asm</FileName>
+              <FileType>2</FileType>
+              <FilePath>.\Service_DFT_Fract\Signal_4_12.asm</FilePath>
             </File>
           </Files>
         </Group>
@@ -952,19 +952,19 @@
           <GroupName>ServiceDFT</GroupName>
           <Files>
             <File>
-              <FileName>CosSin_float.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\Service_DFT_float\CosSin_float.c</FilePath>
-            </File>
-            <File>
-              <FileName>Signal_float.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\Service_DFT_float\Signal_float.c</FilePath>
-            </File>
-            <File>
               <FileName>DFT.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\DFT\DFT.c</FilePath>
+            </File>
+            <File>
+              <FileName>CosSin_Fract_1_15.asm</FileName>
+              <FileType>2</FileType>
+              <FilePath>.\Service_DFT_Fract\CosSin_Fract_1_15.asm</FilePath>
+            </File>
+            <File>
+              <FileName>Signal_4_12.asm</FileName>
+              <FileType>2</FileType>
+              <FilePath>.\Service_DFT_Fract\Signal_4_12.asm</FilePath>
             </File>
           </Files>
         </Group>
